differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr66618.c-5.4.0-0.out.txt
pr66618.c: In function ‘foo’:
pr66618.c:9:18: error: initializer element is not constant
   static int b = a;  
                  ^
